testing: added homepage in package.json

--- a/package.json
+++ b/package.json
@@ -2,5 +2,6 @@
   "name": "beerProducts",
   "version": "1.0.0",
   "keywords": ["html", "css", "javascript", "beer", "products", "beer products"],
-  "description": "Beer products website"
+  "description": "Beer products website",
+  "homepage": "static-beer-products"
 }
