testing: modified homepage in package.json

--- a/package.json
+++ b/package.json
@@ -3,5 +3,5 @@
   "version": "1.0.0",
   "keywords": ["html", "css", "javascript", "beer", "products", "beer products"],
   "description": "Beer products website",
-  "homepage": "static-beer-products"
+  "homepage": "https://tonicoffee.github.io/static-beer-products/"
 }
